logs/hashes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/hashes'...
Listing './lib/python3.5/site-packages/hashes/common'...
Compiling './lib/python3.5/site-packages/hashes/common/helpers.py'...
***   File "./lib/python3.5/site-packages/hashes/common/helpers.py", line 29
    print "#" * 80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/common/orchestra.py'...
***   File "./lib/python3.5/site-packages/hashes/common/orchestra.py", line 93
    print helpers.color("\n\n[*] Error: You must provide an action to perform", warning=True)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashes/ops'...
Compiling './lib/python3.5/site-packages/hashes/ops/bcrypt.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/bcrypt.py", line 22
    print helpers.color("Error: BCrypt requres a salt of 22 alphanumeric characters", warning=True)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashes/ops/cisco_pix.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/cisco_pix.py", line 16
    print "You must provide a username for cisco_pix hashes!"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/ops/msdcc.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/msdcc.py", line 17
    print "You must provide a username for msdcc hashes!"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/ops/msdcc2.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/msdcc2.py", line 16
    print "You must provide a username for msdcc2 hashes!"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/ops/oracle10.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/oracle10.py", line 16
    print "You must provide a username for oracle10 hashes!"
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/ops/postgres_md5.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/postgres_md5.py", line 17
    print "You must provide a username for postgres_md5 hashes!"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashes/ops/sha256_crypt.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/sha256_crypt.py", line 22
    print helpers.color("Sha256_crypt and sha512_crypt require at least 1000 rounds.", warning=True)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashes/ops/sha512_crypt.py'...
***   File "./lib/python3.5/site-packages/hashes/ops/sha512_crypt.py", line 22
    print helpers.color("sha512_crypt and sha512_crypt require at least 1000 rounds.", warning=True)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashes-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_data'...
Listing './lib/python3.5/site-packages/passlib/_data/wordsets'...
Listing './lib/python3.5/site-packages/passlib/crypto'...
Listing './lib/python3.5/site-packages/passlib/crypto/_blowfish'...
Listing './lib/python3.5/site-packages/passlib/crypto/scrypt'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/compat'...
Listing './lib/python3.5/site-packages/passlib-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_bcrypt-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
